--- a/Jun9_2020_SNRvsCorr.ipynb
+++ b/Jun9_2020_SNRvsCorr.ipynb
@@ -13,7 +13,7 @@
     "hidePrompt": false
    },
    "source": [
-    "### Jun 09, 2020"
+    "### <font color='blue'>Jun 09, 2020 <font>"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "hideCode": true,
+    "hideCode": false,
     "slideshow": {
      "slide_type": "-"
     }
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seems plausible, I was expecting $C_sky$ to be higher. Let's check the energy distribution"
+    "<font color='blue'> Seems plausible, I was expecting $C_{sky}$ to be higher. Let's check the energy distribution <font>"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Oh, there seems to be the error. Somehow there are not triggered events with energies higher than $\\sim 10^{17}$"
+    "<font color='blue'> Oh, there seems to be the error. Somehow there are not triggered events with energies higher than $\\sim 10^{17}$ <font>"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I modified the flux file so AraSim correctly reads it. Simulations should be in the queue."
+    "<font color='blue'>I modified the flux file so AraSim correctly reads it. Simulations should be in the queue.</font>"
    ]
   }
  ],
