--- a/Jun9_2020_SNRvsCorr.ipynb
+++ b/Jun9_2020_SNRvsCorr.ipynb
@@ -13,7 +13,7 @@
     "hidePrompt": false
    },
    "source": [
-    "### <font color='blue'>Jun 09, 2020 <font>"
+    "### Jun 09, 2020"
    ]
   },
   {
@@ -65,7 +65,8 @@
    "execution_count": 2,
    "metadata": {
     "hideCode": true,
-    "hidePrompt": false
+    "hideOutput": true,
+    "hidePrompt": true
    },
    "outputs": [],
    "source": [
@@ -80,7 +81,8 @@
    "execution_count": 3,
    "metadata": {
     "hideCode": true,
-    "hidePrompt": false
+    "hideOutput": true,
+    "hidePrompt": true
    },
    "outputs": [],
    "source": [
@@ -93,7 +95,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "hideCode": true
+    "hideCode": true,
+    "hideOutput": true,
+    "hidePrompt": true
    },
    "outputs": [],
    "source": [
@@ -118,7 +122,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hideOutput": false,
+    "hidePrompt": false
+   },
    "source": [
     "## Plots"
    ]
@@ -171,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'> Seems plausible, I was expecting $C_{sky}$ to be higher. Let's check the energy distribution <font>"
+    "#### Seems plausible, I was expecting $C_{sky}$ to be higher. Let's check the energy distribution"
    ]
   },
   {
@@ -179,6 +187,7 @@
    "execution_count": 6,
    "metadata": {
     "hideCode": true,
+    "hideOutput": false,
     "scrolled": false
    },
    "outputs": [
@@ -214,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'> Oh, there seems to be the error. Somehow there are not triggered events with energies higher than $\\sim 10^{17}$ <font>"
+    "#### Oh, there seems to be the error. Somehow there are not triggered events with energies higher than $\\sim 10^{17}$"
    ]
   },
   {
@@ -228,8 +237,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'>I modified the flux file so AraSim correctly reads it. Simulations should be in the queue.</font>"
+    "#### I modified the flux file so AraSim correctly reads it. Simulations should be in the queue."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
