Updates Jun 15, got eff as a function of SNR

--- a/Jun12_2020_analysisEff.ipynb
+++ b/Jun12_2020_analysisEff.ipynb
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
     "plt.grid()\n",
     "plt.legend()\n",
     "plt.tight_layout()\n",
-    "# plt.savefig(\"./plots/CenA_search_efficiency.png\", dpi=200)"
+    "plt.savefig(\"./plots/CenA_search_efficiency.png\", dpi=200)"
    ]
   },
   {
