--- a/Sep24_Polarization_debug.ipynb
+++ b/Sep24_Polarization_debug.ipynb
@@ -441,7 +441,7 @@
    "source": [
     "plt.figure(figsize=(7,5))\n",
     "plt.hist(reco-abs(true), bins=100, density=True, alpha=1,label=\"\");\n",
-    "\n",
+    "print(reco-abs(true)\n",
     "plt.xlabel(\"$\\\\theta_{reco}-\\\\theta_{true}$\")\n",
     "# plt.xlabel(\"$\\\\theta$\")\n",
     "plt.ylabel('Counts [norm.]')\n",
