--- a/DeconvolveARA_ARIANNA.ipynb
+++ b/DeconvolveARA_ARIANNA.ipynb
@@ -607,7 +607,7 @@
     "plt.tight_layout()\n",
     "\n",
     "\n",
-    "plt.savefig(my_path_plots+'/Dumpster/ARA_ARIANNA_filter.png', dpi=150)\n"
+    "# plt.savefig(my_path_plots+'/Dumpster/ARA_ARIANNA_filter.png', dpi=150)\n"
    ]
   },
   {
